--- a/css/index.css
+++ b/css/index.css
@@ -9,8 +9,24 @@ body {
   display: none;
   z-index: 1000;
   position: fixed;
-  top: 10px;
-  left: 10px;
+  top: 10%;
+  right: 0;
+  padding: 30px 15px 30px 15px;
+  background-color: #212222;
+  border-radius: 37.5px 0 0 37.5px;
+
+}
+
+#sanditch-nav{
+  width: 40px;
+  height: auto;
+  z-index: 999;
+  cursor: pointer;
+  margin-bottom: 50px;
+}
+#day-nav{
+
+  margin-bottom: 30px;
 }
 
 .separation-svg-header {
@@ -81,9 +97,10 @@ body {
   display: flex;
   position: absolute;
   top: 10px;
-  right: 50px;
+  right: 10px;
   z-index: 999;
 }
+
 
 .sond-toggle {
   position: absolute;
@@ -100,7 +117,6 @@ body {
 .contenaire {
   margin-right: 30%;
   margin-left: 5%;
-  text-align: justify;
 }
 
 footer {
@@ -129,7 +145,7 @@ footer .espacement-footer {
   .contenaire {
     margin-right: 20px;
     margin-left: 20px;
-    text-align: justify;
+
   }
 
   .separation-svg-header {
