--- a/font/font.css
+++ b/font/font.css
@@ -30,7 +30,7 @@ h3 {
 
 p {
     color: #212222;
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
