--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,18 @@ body {
   margin: 0;
 }
 
+#conteneur-flou {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(5px); /* Ajustez le niveau de flou selon vos préférences */
+
+  display: none;
+}
+
 #close-nav{
   cursor: pointer;
   position: fixed;
