--- a/font/font.css
+++ b/font/font.css
@@ -19,6 +19,10 @@ h2 {
     line-height: normal;
 }
 
+#mentions h3{
+    color: #212222;
+}
+
 h3 {
     color: #FFF;
     font-family: Philosopher;
@@ -27,6 +31,8 @@ h3 {
     font-weight: 700;
     line-height: normal;
 }
+
+
 
 p {
     color: #212222;
