--- a/css/1charactere.css
+++ b/css/1charactere.css
@@ -13,7 +13,7 @@ body {
 }
 a{
 text-decoration: none;
-
+z-index: 2;
 }
 
 a:hover{
@@ -44,7 +44,6 @@ h2{
     margin-top: 133px;
     position: absolute;
     z-index: 1;
-
     background-color: #fff;
     width: 5%;
     height: 64px;
