--- a/css/1charactere.css
+++ b/css/1charactere.css
@@ -3,7 +3,8 @@ body {
     background-size: cover;
 
 }
-.top-conteneur{
+
+.top-conteneur {
     margin-top: 20px;
     display: flex;
     justify-content: space-between;
@@ -11,20 +12,23 @@ body {
     align-items: center;
     height: fit-content;
 }
-a{
-text-decoration: none;
-z-index: 2;
+
+a {
+    text-decoration: none;
+    z-index: 2;
 }
 
-a:hover{
-text-decoration: underline;
-text-decoration-color: #fff ;
+a:hover {
+    text-decoration: underline;
+    text-decoration-color: #fff;
 }
-h1{
+
+h1 {
     color: #CFBD93;
     margin-left: -37%;
 }
-h2{
+
+h2 {
     color: #fff;
 }
 
@@ -76,7 +80,12 @@ h2{
     width: 75px;
     margin-left: 5%;
     display: flex;
-    border: 4px solid #88847A;
+    border-left: 4px solid #88847A;
+    border-right: 4px solid #88847A;
+    border-top: none;
+    border-bottom: none;
+    border-image: linear-gradient(to bottom, #88847A, #88847A00);
+    border-image-slice: 1;
     height: 100vh;
     background: linear-gradient(180deg, #4C5362 0%, rgba(76, 83, 98, 0.00) 100%);
 }
@@ -87,7 +96,7 @@ h2{
     width: 40%;
 }
 
-.separation{
+.separation {
     margin-top: 15px;
     margin-bottom: 15px;
     width: auto;
@@ -95,7 +104,7 @@ h2{
     background: rgba(255, 255, 255, 0.24);
 }
 
-.text-reponce{
+.text-reponce {
     display: flex;
     justify-content: space-between;
 }
