--- a/css/2charactere.css
+++ b/css/2charactere.css
@@ -78,7 +78,12 @@ h2{
     width: 75px;
     margin-left: 5%;
     display: flex;
-    border: 4px solid #88847A;
+    border-left: 4px solid #88847A;
+    border-right: 4px solid #88847A;
+    border-top: none;
+    border-bottom: none;
+    border-image: linear-gradient(to bottom, #88847A, #88847A00);
+    border-image-slice: 1;
     height: 100vh;
     background: linear-gradient(180deg, #4C5362 0%, rgba(76, 83, 98, 0.00) 100%);
 }
