ajour d'étoire pour indication page charactere

--- a/css/2charactere.css
+++ b/css/2charactere.css
@@ -63,6 +63,16 @@ h2{
     height: 64px;
 }
 
+.star{
+    left: 0;
+    margin-left: calc(5% + 45px);
+    margin-top: 224px;
+    position: absolute;
+    z-index: 1;
+    height: 64px;
+    width: auto;
+}
+
 #blocPerso {
 
     display: flex;
