page charactere h1 replacement

--- a/css/2charactere.css
+++ b/css/2charactere.css
@@ -22,7 +22,7 @@ text-decoration-color: #fff ;
 }
 h1{
     color: #CFBD93;
-    margin-left: -37%;
+    margin-left: calc(-40% + -45px);
 }
 h2{
     color: #fff;
