--- a/font/font.css
+++ b/font/font.css
@@ -1,3 +1,23 @@
+@font-face {
+    font-family: 'Philosopher'; 
+    src: url('Philosopher-Regular.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat'; 
+    src: url('Montserrat-Regular.otf') format('otf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+body {
+    font-family: 'Philosopher', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+}
+
 h1 {
     z-index: 1;
     color: #FFF;
