fix bug titre charactere

--- a/css/1charactere.css
+++ b/css/1charactere.css
@@ -132,7 +132,7 @@ h2 {
     }
 
     .conteneur-text {
-        margin-top: calc(8% + 150px);
+        margin-top:50px;
         width: 95%;
     }
 
@@ -141,13 +141,12 @@ h2 {
     display: block;
     }
     .top-conteneur h1{
-        color: #CFBD93;
-        margin-left: 5%;
-        margin-top: -90vh;
+        display: none;
     }
     .top-conteneur h3{
         display: none;
     }
+    
     .nav-bas{
         align-items: center;
         justify-content: start;
@@ -186,10 +185,16 @@ h2 {
         justify-content: flex-end;
         width: 100%;
     }
+    .responsive-h1{
+        padding-top: 30px;
+        margin-left: 5%
+    }
   }
 
   @media screen and (min-width: 1060px) {
-
+    .responsive-h1{
+        display: none;
+    }
     .nav-bas{
         display: none;
     }
