--- a/css/1charactere.css
+++ b/css/1charactere.css
@@ -146,7 +146,7 @@ h2 {
     .top-conteneur h3{
         display: none;
     }
-    
+
     .nav-bas{
         align-items: center;
         justify-content: start;
@@ -175,6 +175,7 @@ h2 {
     .responcive-head{
         width: auto;
         height: 55px;
+        z-index: 2;
     }
     .nav-bas a{
         margin-left: 30px;
@@ -188,6 +189,16 @@ h2 {
     .responsive-h1{
         padding-top: 30px;
         margin-left: 5%
+    }
+    .white{
+        border-radius: 32px 32px 0 0;
+        margin-left: 88.5px;
+        background-color: #fff;
+        z-index: 1;
+        bottom: 0;
+        position: fixed;
+        height: 64px;
+        width: 62px;
     }
   }
 
