--- a/css/2charactere.css
+++ b/css/2charactere.css
@@ -168,6 +168,7 @@ h2{
         margin-top: -16px;
         width: auto;
         height: 75px;
+        margin-right: -10.5px;
     }
     .responcive-head{
         width: auto;
@@ -185,6 +186,16 @@ h2{
     .responsive-h1{
         padding-top: 30px;
         margin-left: 5%
+    }
+    .white{
+        border-radius: 32px 32px 0 0;
+        margin-left: 173.5px;
+        background-color: #fff;
+        z-index: 1;
+        bottom: 0;
+        position: fixed;
+        height: 64px;
+        width: 62px;
     }
   }
 
