--- a/css/info.css
+++ b/css/info.css
@@ -1,40 +1,10 @@
-h1 {
-    z-index: 1;
-    text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.35);
-    font-family: Philosopher;
-    font-size: 62px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-
-h2 {
-    z-index: 1;
-    font-family: Philosopher;
-    font-size: 38px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-
-p {
-    color: #212222;
-    font-family: Montserrat;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-body {
-  margin: 0;
-  height: 100vh;
+.bodyflex {
+    
   display: flex;
   justify-content: center;
   align-items: center;
-  background-size: cover;
+  margin-bottom: 50px;
 }
-
 .center {
     width: 150px;
     height: 150px;
@@ -68,6 +38,7 @@ body {
     height: 100%;
     transform: translate(-50px, -50px);
     filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+    min-height: 756px;
 }
 .information-box {
     width: 80%;
@@ -76,6 +47,7 @@ body {
     display: none;
     padding: 25px;
     background: url(../images/BgB.png), linear-gradient(to right, #545b66, #7c8894);
+    max-height: 756px;
 }
 
 .title h1 {
@@ -302,5 +274,10 @@ body {
     }
     .information-container {
         width: 80%;
+    }
+}
+@media (min-width: 960px) {
+    .bodyflex{
+        height: 100vh;
     }
 }
