ajout du mode a dans le mode nuit

--- a/css/mentions.css
+++ b/css/mentions.css
@@ -28,6 +28,10 @@
  margin-left: 5px;
 }
 
+#a{
+    color: #3B8CD4;
+  }
+
 @media screen and (max-width: 768px) {
     .text-contenaire{
         display: block;
