--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -11,6 +11,29 @@
   display: none;
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+  padding-left: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: gainsboro;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: black;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
 #close-nav {
   cursor: pointer;
   position: fixed;
