--- a/css/info.css
+++ b/css/info.css
@@ -37,7 +37,6 @@
     width: 100%;
     height: 100%;
     transform: translate(-50px, -50px);
-    filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
     min-height: 756px;
 }
 .information-box {
@@ -244,7 +243,7 @@
 
 }
 .ico:hover {
-    filter: drop-shadow(0 0 0.75rem rgb(146, 255, 178));
+    filter: drop-shadow(0 0 0.75rem rgb(34, 104, 255));
 }
 
 @keyframes growAndFade {
@@ -274,6 +273,11 @@
     }
     .information-container {
         width: 80%;
+    }
+    .bar-graph p {
+        width: 60px;
+        min-width: 60px;
+        word-wrap: break-word;
     }
 }
 @media (min-width: 960px) {
