responsive add index

--- a/css/index.css
+++ b/css/index.css
@@ -136,8 +136,8 @@
 
 @media screen and (max-width: 768px) {
   .contenaire {
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
 
   }
 
@@ -150,7 +150,12 @@
 
   }
 
+  .contenaire-img  {
+    width: 100%;
+  
+  }
   .home-page-title {
     align-items: start;
+    margin-left: 10px;
   }
 }
