--- a/css/index.css
+++ b/css/index.css
@@ -145,6 +145,14 @@
     display: none;
   }
 
+  #scroll-menue {
+    width: 40px;
+    top: 0;
+    margin-top: -5vh;
+
+    padding: 40px 15px 15px 15px;
+  }
+
   #sond-nav {
     display: none;
 
