--- a/css/1charactere.css
+++ b/css/1charactere.css
@@ -13,6 +13,17 @@ body {
     height: fit-content;
 }
 
+.contenaire-img {
+    position: absolute;
+    margin-top: 80px;
+    margin-left: 55%;
+}
+
+.contenaire-img img {
+    height: 90vh;
+    width: auto;
+}
+
 a {
     text-decoration: none;
     z-index: 2;
@@ -66,7 +77,7 @@ h2 {
     height: 64px;
 }
 
-.star{
+.star {
     left: 0;
     margin-left: calc(5% + 45px);
     margin-top: 139px;
@@ -126,71 +137,81 @@ h2 {
 
 }
 
+
 @media screen and (max-width: 1060px) {
-    #blocGaucheHaut{
+    #blocGaucheHaut {
         display: none;
     }
 
     .conteneur-text {
-        margin-top:50px;
+        margin-top: 50px;
         width: 95%;
     }
 
     #blocHaut {
 
-    display: block;
+        display: block;
     }
-    .top-conteneur h1{
-        display: none;
-    }
-    .top-conteneur h3{
+
+    .top-conteneur h1 {
         display: none;
     }
 
-    .nav-bas{
+    .top-conteneur h3 {
+        display: none;
+    }
+
+    .nav-bas {
         align-items: center;
         justify-content: start;
         bottom: 0;
         width: 100vw;
         display: flex;
-        border-left:none;
+        border-left: none;
         border-right: none;
         border-top: 4px solid #88847A;
         border-bottom: none;
         position: fixed;
         height: 60px;
-        background: linear-gradient( 90deg, #4C5362 0%, rgba(76, 83, 98, 0.00) 300%);    
+        background: linear-gradient(90deg, #4C5362 0%, rgba(76, 83, 98, 0.00) 300%);
     }
+
     body {
         background-image: url('/image/charactere/backgroundDendro.jpg');
         background-size: cover;
         height: 100vh;
-        margin: 0; 
+        margin: 0;
     }
-    .responice-eyes{
+
+    .responice-eyes {
         margin-top: -16px;
         width: auto;
         height: 75px;
     }
-    .responcive-head{
+
+    .responcive-head {
         width: auto;
         height: 55px;
         z-index: 2;
     }
-    .nav-bas a{
+
+    .nav-bas a {
         margin-left: 30px;
     }
+
     .align-droit {
         margin-right: 35px;
         display: flex;
         justify-content: flex-end;
         width: 100%;
     }
-    .responsive-h1{
+
+    .responsive-h1 {
         padding-top: 30px;
         margin-left: 5%
     }
-    .white{
+
+    .white {
         border-radius: 32px 32px 0 0;
         margin-left: 88.5px;
         background-color: #fff;
@@ -200,13 +221,22 @@ h2 {
         height: 64px;
         width: 62px;
     }
-  }
 
-  @media screen and (min-width: 1060px) {
-    .responsive-h1{
+    .contenaire-img {
+        display: flex;
+        align-items: center;
+        margin-left: 0%;
+        width: 100%;
+        justify-content: center
+    }
+}
+
+@media screen and (min-width: 1060px) {
+    .responsive-h1 {
         display: none;
     }
-    .nav-bas{
+
+    .nav-bas {
         display: none;
     }
-  }
+}
