--- a/css/2charactere.css
+++ b/css/2charactere.css
@@ -17,6 +17,7 @@ body {
     position: absolute;
     margin-top: 80px;
     margin-left: 55%;
+    bottom: 0;
 }
 
 .contenaire-img img {
@@ -180,7 +181,7 @@ h2 {
     body {
         background-image: url('/image/charactere/backgroundRainer.png');
         background-size: cover;
-        height: 100vh;
+        height: 200vh;
         margin: 0;
     }
 
@@ -224,11 +225,14 @@ h2 {
     }
 
     .contenaire-img {
+        position: relative;
         display: flex;
         align-items: center;
         margin-left: 0%;
         width: 100%;
-        justify-content: center
+        justify-content: center;
+        margin-top: 30px;
+        margin-bottom: 70px;
     }
 }
 
