--- a/css/1charactere.css
+++ b/css/1charactere.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/image/charactere/backgroundDendro.jpg');
+    background-image: url('../image/charactere/backgroundDendro.jpg');
     background-size: cover;
 
 }
@@ -120,6 +120,20 @@ h2 {
     width: 40%;
 }
 
+.head-contenaire1{
+    z-index: 3;
+    position: absolute;
+    margin-left: 40;
+    margin-top: 128px ;
+}
+
+.head-contenaire2{
+    z-index: 3;
+    position: absolute;
+    margin-left: 40;
+    margin-top: 210px ;
+}
+
 .separation {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -232,7 +246,19 @@ h2 {
         width: 100%;
         justify-content: center;
         margin-top: 30px;
-        margin-bottom: 0px;
+        margin-bottom: 70px;
+    }
+    .head-contenaire1-responcive{
+        z-index: 3;
+        position: absolute;
+        margin-left: 90px !important;
+        margin-bottom: 10px ;
+    }
+    .head-contenaire2-responcive{
+        z-index: 3;
+        position: absolute;
+        margin-left: 175px !important;
+        margin-bottom: 20px ;
     }
 }
 
