--- a/css/2charactere.css
+++ b/css/2charactere.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/image/charactere/backgroundRainer.png');
+    background-image: url('../image/charactere/backgroundRainer.png');
     background-size: cover;
 
 }
@@ -13,6 +13,19 @@ body {
     height: fit-content;
 }
 
+.head-contenaire1{
+    z-index: 3;
+    position: absolute;
+    margin-left: 40;
+    margin-top: 128px ;
+}
+
+.head-contenaire2{
+    z-index: 3;
+    position: absolute;
+    margin-left: 40;
+    margin-top: 210px ;
+}
 .contenaire-img {
     position: absolute;
     margin-top: 80px;
@@ -233,6 +246,18 @@ h2 {
         justify-content: center;
         margin-top: 30px;
         margin-bottom:0px;
+    }
+    .head-contenaire1-responcive{
+        z-index: 3;
+        position: absolute;
+        margin-left: 90px !important;
+        margin-bottom: 10px ;
+    }
+    .head-contenaire2-responcive{
+        z-index: 3;
+        position: absolute;
+        margin-left: 175px !important;
+        margin-bottom: 20px ;
     }
 }
 
