--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,7 @@
 
 .desGraph {
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 }
 
 #menue-menue {
@@ -138,6 +138,20 @@
 .centrage-img {
   display: flex;
   align-items: center;
+}
+
+
+
+
+.button{
+
+  margin-top: 60px;  
+  margin-bottom: 90px;
+  display: flex;
+  justify-content: space-around;
+
+
+
 }
 
 
@@ -177,5 +191,15 @@
   .home-page-title {
     align-items: start;
     margin-left: 10px;
+  }
+
+  .button{
+
+  
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+  
+  
   }
 }
