--- a/css/2charactere.css
+++ b/css/2charactere.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/image/charactere/backgroundRainer.png');
+    background-image: url('../image/charactere/backgroundRainer.png');
     background-size: cover;
 
 }
