--- a/css/1charactere.css
+++ b/css/1charactere.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/image/charactere/backgroundDendro.jpg');
+    background-image: url('../image/charactere/backgroundDendro.jpg');
     background-size: cover;
 
 }
