--- a/font/font.css
+++ b/font/font.css
@@ -47,6 +47,15 @@ h3 {
     line-height: normal;
 }
 
+h3 {
+    color: #212222;
+    font-family: Philosopher;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
 
 p {
     color: #212222;
