--- a/font/font.css
+++ b/font/font.css
@@ -47,10 +47,10 @@ h3 {
     line-height: normal;
 }
 
-h3 {
-    color: #212222;
+h4 {
+    color: #fff;
     font-family: Philosopher;
-    font-size: 20px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
