scroll pour la page index

--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,16 @@
   width: 30vw;
 }
 
-
+#scroll-down {
+  z-index: 1000;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 50px;
+  height: 5%;
+  display: flex;
+  left: 50%;
+transition: transform 1s ease-in-out;
+}
 
 .theme-toggle,
 .sond-toggle img {
