--- a/css/1charactere.css
+++ b/css/1charactere.css
@@ -195,7 +195,7 @@ h2 {
     body {
         background-image: url('/image/charactere/backgroundDendro.jpg');
         background-size: cover;
-        height: 160vh;
+        height: 100%;
         margin: 0;
     }
 
