--- a/css/2charactere.css
+++ b/css/2charactere.css
@@ -194,7 +194,7 @@ h2 {
     body {
         background-image: url('/image/charactere/backgroundRainer.png');
         background-size: cover;
-        height: 200vh;
+        height: 100%;
         margin: 0;
     }
 
@@ -238,7 +238,7 @@ h2 {
         width: 100%;
         justify-content: center;
         margin-top: 30px;
-        margin-bottom:0px;
+        margin-bottom: 100px;
     }
     .head-contenaire1-responcive{
         z-index: 3;
