--- a/css/index.css
+++ b/css/index.css
@@ -15,13 +15,15 @@
 }
 
 #scroll-down {
-  z-index: 1000;
+  z-index: 999;
   position: absolute;
   bottom: 0;
+
   margin-bottom: 50px;
   height: 5%;
   display: flex;
-  left: 50%;
+margin-left: 48.5%;
+
 transition: transform 1s ease-in-out;
 }
 
