fix des backgrounds qui dépassent des boites

--- a/css/info.css
+++ b/css/info.css
@@ -303,6 +303,7 @@ body {
     }
     .information-box {
         display: block;
+        height: 756px;
     }
     .exit {
         display: none;
@@ -319,6 +320,7 @@ body {
     .textTitle {
         display: none;
     }
+
 }
 @media (min-width: 960px) {
     .bodyflex{
