--- a/css/headeronly.css
+++ b/css/headeronly.css
@@ -148,9 +148,8 @@
     #scroll-menue {
       width: 40px;
       top: 0;
-      margin-top: -5vh;
-  
-      padding: 40px 15px 15px 15px;
+      margin-top: -7%;
+      padding: 50px 15px 15px 15px;
     }
   
     #sanditch-nav {
