--- a/css/index.css
+++ b/css/index.css
@@ -20,9 +20,9 @@
   bottom: 0;
 
   margin-bottom: 50px;
-  height: 5%;
+  width: 60px;
   display: flex;
-margin-left: 48%;
+margin-left: calc(50% + -60px) ;
 
 transition: transform 1s ease-in-out;
 }
@@ -216,8 +216,4 @@ transition: transform 1s ease-in-out;
   
   }
 
-  #scroll-down {
-  margin-left: 50%;
-
-  }
 }
