--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,16 @@
 #scroll-top {
   z-index: 999;
   width: 70px;
- height: auto;
+  height: auto;
   position: fixed;
   bottom: 10px;
   right: 10px;
   cursor: pointer;
   opacity: 0;
-  transition: opacity 0.5s ease; 
+  transition: opacity 0.5s ease;
 }
+
+
 
 #scroll-top.active {
   opacity: 1;
@@ -16,7 +18,8 @@
 
 .scroll-appear {
   opacity: 0;
-  transform: translateY(60px); /* Move the elements down initially */
+  transform: translateY(60px);
+  /* Move the elements down initially */
   transition: opacity 0.8s ease, transform 0.8s ease;
 }
 
@@ -29,17 +32,19 @@
   height: auto;
   width: 30vw;
 }
-.conteur-scroll{
+
+.conteur-scroll {
   display: flex;
   justify-content: space-around;
 }
+
 #scroll-down {
   z-index: 999;
   position: absolute;
   bottom: 0;
   margin-bottom: 50px;
   width: 60px;
-transition: transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
 }
 
 .theme-toggle,
@@ -57,7 +62,7 @@ transition: transform 1s ease-in-out;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(0deg,  #FFF 1.48%, rgba(255, 255, 255, 0) 22.74%);
+  background: linear-gradient(0deg, #FFF 1.48%, rgba(255, 255, 255, 0) 22.74%);
 }
 
 .home-page-title {
@@ -81,9 +86,10 @@ transition: transform 1s ease-in-out;
   position: absolute;
 }
 
-.annim_home_page_night{
+.annim_home_page_night {
   display: none;
 }
+
 .annim_home_page_day {
   z-index: 0;
   align-self: center;
@@ -154,12 +160,12 @@ transition: transform 1s ease-in-out;
 
 }
 
-.contenaire-img  {
+.contenaire-img {
   width: 80%;
 
 }
 
-#a{
+#a {
   color: #3B8CD4;
 }
 
@@ -171,17 +177,60 @@ transition: transform 1s ease-in-out;
 
 
 
-.button{
-
-  margin-top: 60px;  
+.button {
+  margin-top: 60px;
   margin-bottom: 90px;
   display: flex;
   justify-content: space-around;
-
-
+  align-items: center;
 
 }
 
+.data-button {
+  width: 250px;
+  height: 75px;
+  border-radius: 43.5px;
+  border: 2px solid #CFBD93;
+  background: #CFBD93;
+  display: flex;
+  transition: 0.3s;
+  align-items: center;
+  justify-content: center;
+}
+
+.charactere-button {
+  width: 250px;
+  height: 75px;
+  border-radius: 43.5px;
+  border: 2px solid #B0906A;
+  background: linear-gradient(180deg, #222335 0%, #3C4263 57.4%);
+  display: flex;
+  transition: 0.3s;
+  align-items: center;
+  justify-content: center;
+}
+
+.data-button h3 {
+  color: #212222;
+}
+
+.button a {
+  text-decoration: none;
+}
+
+.charactere-button h3 {
+  color: white;
+}
+
+.data-button:hover {
+  border: 2px solid #c9a67b;
+  background: #e1cea0;
+}
+
+.charactere-button:hover {
+  border: 2px solid #B0906A;
+  background: linear-gradient(180deg, #2a2b42 0%, #464d73 57.4%);
+}
 
 @media screen and (max-width: 768px) {
   .contenaire {
@@ -190,7 +239,7 @@ transition: transform 1s ease-in-out;
 
   }
 
-  #h2-titre{
+  #h2-titre {
     margin-top: 20px;
     font-size: 24px;
   }
@@ -205,29 +254,31 @@ transition: transform 1s ease-in-out;
     margin-top: -7%;
     padding: 45px 15px 15px 15px;
   }
+
   #sond-nav {
     display: none;
 
   }
 
-  .contenaire-img  {
+  .contenaire-img {
     width: 100%;
-  
+
   }
+
   .home-page-title {
     align-items: start;
     margin-left: 10px;
   }
 
-  .button{
+  .button {
 
-  
+
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
-  
-  
+
+
   }
 
-  
+
 }
