--- a/css/info.css
+++ b/css/info.css
@@ -60,7 +60,7 @@ body {
 
 .info-border { 
     border:50px solid transparent;
-    border-image: url(../images/Border.png) 100;
+    border-image: url(../image/Border.png) 100;
     width: 100%;
     height: 100%;
     transform: translate(-50px, -50px);
@@ -71,7 +71,7 @@ body {
     margin-top: 10%;
     display: none;
     padding: 25px;
-    background: url(../images/BgB.png), linear-gradient(to right, #545b66, #7c8894);
+    background: url(../image/BgB.png), linear-gradient(to right, #545b66, #7c8894);
     max-height: 756px;
 }
 
