--- a/css/headeronly.css
+++ b/css/headeronly.css
@@ -73,12 +73,37 @@
   }
   
   #sanditch-nav {
-    width: 40px;
-    height: auto;
     z-index: 999;
     cursor: pointer;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
   }
+    
+    .trait1{
+      margin-bottom: 8px;
+      width: 39px;
+      height: 3px;
+      background-color: white;
+      border-radius: 10px;
+    }
+    
+    .trait2{
+      margin-bottom: 8px;
+      width: 39px;
+      height: 3px;
+      background-color: white;
+      border-radius: 10px;
+    }
+    
+    .trait3{
+      width: 39px;
+      height: 3px;
+      background-color: white;
+      border-radius: 10px;
+    }
 
   
   .theme-toggle img {
