--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -88,6 +88,7 @@
     height: 3px;
     background-color: white;
     border-radius: 10px;
+     flex-shrink: 0;
   }
   
   .trait2{
@@ -96,6 +97,7 @@
     height: 3px;
     background-color: white;
     border-radius: 10px;
+     flex-shrink: 0;
   }
   
   .trait3{
@@ -103,6 +105,7 @@
     height: 3px;
     background-color: white;
     border-radius: 10px;
+     flex-shrink: 0;
   }
 
 #day-nav {
